--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
   padding: 30px;
   display: flex;
+  background-color: #03fdfd;
+  align-items: center;
+  justify-content: center;
+  font-family: "Berlin Sans FB"
 }
 
 .App > div {
@@ -17,7 +21,17 @@
 
 .active-filter {
   background-color: yellow;
+  border-radius: 15px;
 }
 .is-done {
   opacity: 38%;
+}
+button {
+  border-radius: 15px;
+  color: red;
+  background-color: green;
+  font-family: "Berlin Sans FB";
+}
+input{
+  border-radius: 5px;
 }
